src/objects/GTIN__c.object
<CustomObject>
    <description>Contains the GTINs related to Local Products.</description>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Argentina</fullName>
                </value>
                <value>
                    <fullName>Australia</fullName>
                </value>
                <value>
                    <fullName>Austria</fullName>
                </value>
                <value>
                    <fullName>Austria-PGP</fullName>
                </value>
                <value>
                    <fullName>Bahrain</fullName>
                </value>
                <value>
                    <fullName>Belarus</fullName>
                </value>
                <value>
                    <fullName>Belgium</fullName>
                </value>
                <value>
                    <fullName>Belgium-PGP</fullName>
                </value>
                <value>
                    <fullName>Belize</fullName>
                </value>
                <value>
                    <fullName>Bolivia</fullName>
                </value>
                <value>
                    <fullName>Brazil</fullName>
                </value>
                <value>
                    <fullName>Canada</fullName>
                </value>
                <value>
                    <fullName>Chile</fullName>
                </value>
                <value>
                    <fullName>China</fullName>
                </value>
                <value>
                    <fullName>Colombia</fullName>
                </value>
                <value>
                    <fullName>Costa Rica</fullName>
                </value>
                <value>
                    <fullName>Croatia</fullName>
                </value>
                <value>
                    <fullName>Cyprus</fullName>
                </value>
                <value>
                    <fullName>Czech Republic</fullName>
                </value>
                <value>
                    <fullName>Denmark</fullName>
                </value>
                <value>
                    <fullName>Dominican Republic</fullName>
                </value>
                <value>
                    <fullName>Ecuador</fullName>
                </value>
                <value>
                    <fullName>Egypt</fullName>
                </value>
                <value>
                    <fullName>El Salvador</fullName>
                </value>
                <value>
                    <fullName>Estonia</fullName>
                </value>
                <value>
                    <fullName>Finland</fullName>
                </value>
                <value>
                    <fullName>France</fullName>
                </value>
                <value>
                    <fullName>France-PGP</fullName>
                </value>
                <value>
                    <fullName>Germany</fullName>
                </value>
                <value>
                    <fullName>Germany-PGP</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>GCR_LPID__c</fullName>
        <label>GCR_LPID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Local_Product__c</fullName>
        <label>Local Product</label>
        <referenceTo>Local_Product__c</referenceTo>
        <relationshipLabel>GTIN</relationshipLabel>
        <relationshipName>GTINProducts</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>GTIN</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Country__c</columns>
        <columns>GCR_LPID__c</columns>
        <columns>Local_Product__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>contains</operation>
            <value>00037000000129</value>
        </filters>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>GTIN_Searching</fullName>
        <columns>Country__c</columns>
        <columns>NAME</columns>
        <columns>GCR_LPID__c</columns>
        <columns>Local_Product__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>contains</operation>
            <value>4902430708258</value>
        </filters>
        <label>GTIN Searching</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>GTIN Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>GTIN</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>